examples/test/testpolicy10997.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10997
  namespace: namespace374
spec:
  podSelector:
    matchLabels:
      key48: value24
      key49: value5
      key11: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value37
          key26: value35
          key30: value29
      podSelector:
        matchLabels:
          key45: value7
          key44: value30
          key22: value39
